Updated and yanked junk

--- a/test_preseed.cfg
+++ b/test_preseed.cfg
@@ -19,7 +19,7 @@ d-i mirror/http/hostname string archive.ubuntu.com
 d-i mirror/http/directory string /ubuntu
 d-i mirror/http/proxy string
 
-d-i mirror/http/mirror select ch.archive.ubuntu.com
+d-i mirror/http/mirror select us.archive.ubuntu.com
 
 # Set up clocks
 d-i clock-setup/utc boolean true
@@ -146,42 +146,27 @@ tasksel tasksel/first multiselect ubuntu-desktop, virt-host
 
 # Individual additional packages to install
 d-i pkgsel/include string openssh-server \
-  language-pack-de \
-  language-pack-gnome-de \
   language-pack-en \
   language-pack-gnome-en \
-  wngerman \
-  wogerman \
   wamerican \
-  wbritish \
-  wswiss \
-  firefox-locale-de \
-  thunderbird-locale-de \
+  firefox-locale-en \
   libreoffice \
-  libreoffice-l10n-de \
-  libreoffice-help-de \
-  hyphen-de \
+  libreoffice-l10n-en \
+  libreoffice-help-en \
   hyphen-en-us \
-  mythes-de-ch \
-  mythes-de \
   mythes-en-us \
-  hunspell-de-de \
-  hunspell-de-ch \
   hunspell-en-us \
   poppler-data \
-  myspell-en-gb \
+  myspell-en-us \
   acroread \
   apt-file \
   autofs \
   build-essential \
   byobu \
   chromium-browser \
-  cifs-utils \
   console-common \
-  davfs2 \
   eclipse \
   eclipse-egit \
-  enigmail \
   filezilla \
   gedit-plugins \
   git \
@@ -192,15 +177,12 @@ d-i pkgsel/include string openssh-server \
   htop \
   inkscape \
   libcrack2 \
-  libreoffice-presenter-console \
   lightning-extension \
   meld \
   nautilus-compare \
   nautilus-filename-repairer \
   nautilus-image-converter \
   nautilus-open-terminal \
-  network-manager-openvpn \
-  network-manager-openvpn-gnome \
   nmap \
   regexxer \
   rdesktop \
@@ -215,8 +197,6 @@ d-i pkgsel/include string openssh-server \
   vim \
   virt-manager \
   vlc \
-  wine \
-  wireshark \
   zenity
 
 # Whether to upgrade packages after debootstrap.
@@ -238,7 +218,6 @@ popularity-contest popularity-contest/participate boolean false
 
 # Avoid that last message about the install being complete.
 d-i finish-install/reboot_in_progress note
-
 
 # This will power off the machine instead of just halting it.
 d-i debian-installer/exit/poweroff boolean true
