Fixed root user password

--- a/test_preseed.cfg
+++ b/test_preseed.cfg
@@ -1,7 +1,6 @@
 # Preseeding only locale sets language, country and locale.
 d-i debian-installer/locale string en_US.UTF-8
 
-
 # Disable automatic keyboard detection
 d-i console-setup/ask_detect boolean false
 
@@ -107,6 +106,7 @@ d-i passwd/make-user boolean false
 
 # Root password, either in clear text
 d-i passwd/root-password password r00tme
+d-i passwd/root-root-password-again password r00tme
 
 d-i user-setup/encrypt-home boolean false
 
