Removed some more packages

--- a/test_preseed.cfg
+++ b/test_preseed.cfg
@@ -134,7 +134,7 @@ d-i apt-setup/multiverse boolean true
 d-i apt-setup/partner boolean true
 d-i apt-setup/extras boolean true
 d-i apt-setup/non-free boolean false
-d-i apt-setup/backports boolean false
+d-i apt-setup/backports boolean true
 
 # Accept Microsoft Fonts EULA
 ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula boolean true
@@ -151,52 +151,22 @@ d-i pkgsel/include string openssh-server \
   wamerican \
   firefox-locale-en \
   libreoffice \
-  libreoffice-l10n-en \
-  libreoffice-help-en \
-  hyphen-en-us \
-  mythes-en-us \
-  hunspell-en-us \
-  poppler-data \
-  myspell-en-us \
   acroread \
-  apt-file \
   autofs \
   build-essential \
-  byobu \
   chromium-browser \
-  console-common \
-  eclipse \
-  eclipse-egit \
-  filezilla \
-  gedit-plugins \
   git \
-  gitg \
   gnupg \
   gnupg-agent \
   gpm \
   htop \
-  inkscape \
-  libcrack2 \
-  lightning-extension \
-  meld \
-  nautilus-compare \
-  nautilus-filename-repairer \
-  nautilus-image-converter \
-  nautilus-open-terminal \
   nmap \
-  regexxer \
-  rdesktop \
   retext \
   ruby \
-  shutter \
-  skype \
   synaptic \
   terminator \
   traceroute \
-  ubuntu-restricted-extras \
   vim \
-  virt-manager \
-  vlc \
   zenity
 
 # Whether to upgrade packages after debootstrap.
