--- a/test_preseed.cfg
+++ b/test_preseed.cfg
@@ -107,6 +107,7 @@ d-i passwd/make-user boolean false
 # Root password, either in clear text
 d-i passwd/root-password password r00tme
 d-i passwd/root-password-again password r00tme
+d-i user-setup/allow-password-weak boolean true
 
 d-i user-setup/encrypt-home boolean false
 
