--- a/test_preseed.cfg
+++ b/test_preseed.cfg
@@ -173,6 +173,9 @@ d-i pkgsel/include string openssh-server \
 # Allowed values: none, safe-upgrade, full-upgrade
 d-i pkgsel/upgrade select full-upgrade
 
+# Install Grub on MBR
+d-i grub-installer/only_debian boolean true
+
 # Language pack selection
 d-i pkgsel/language-packs multiselect en
 
